src/App.css
.App {
  text-align: center;
}


/*NAVBAR STYLING*/
nav {
  display: flex;
  justify-content: space-between;
  background-color: gray;
  padding-left: 5vw;
  padding-right: 5vw;
  align-items: center;
}
.links {
  display: flex;
  justify-content: space-around;
  gap: 3vw;
}

/*PROJECTS STYLING*/
.projects {
  background-color: gray;
  text-align: left;
  padding-left: 5vw;
  padding-right: 5vw;
}
img {
  margin-left: auto;
  margin-right: auto;
}

/*TOOLS STYLING*/
.tools {
  text-align: left;
  padding-left: 5vw;
  padding-right: 5vw;
}
.tools img {
  width: 50px;
}

